--- a/src-widgets/index.html
+++ b/src-widgets/index.html
@@ -11,11 +11,12 @@
         window.socketLoadedHandler = cb;
       };
       script.onload = function () { typeof window.socketLoadedHandler === 'function' && window.socketLoadedHandler(); };
-      script.src = window.location.protocol + '//' + window.location.hostname + ':8082/sweethome3d/lib/js/socket.io.js';
+      script.src = `${window.location.protocol}//${window.location.hostname}:8082/lib/js/socket.io.js`;
       document.head.appendChild(script);
     </script>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="src/index.tsx"></script>
   </body>
 </html>
